--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -19,15 +19,16 @@
     "@storybook/addon-links": "^6.5.12",
     "@storybook/builder-vite": "^0.2.3",
     "@storybook/react": "^6.5.12",
-    "@storybook/storybook-deployer": "^2.8.16",
+    "@storybook/storybook-deployer": "^2.8.12",
     "@storybook/testing-library": "^0.0.13",
     "@vitejs/plugin-react": "^2.1.0",
     "babel-loader": "^8.2.5",
     "vite": "^3.1.4"
   },
   "dependencies": {
-    "@jottaf-ui/react": "*",
-    "@jottaf-ui/tokens": "*",
+    "@ignite-ui/react": "*",
+    "@ignite-ui/tokens": "*",
+    "@storybook/addon-a11y": "^6.5.12",
     "phosphor-react": "^1.4.1",
     "polished": "^4.2.2",
     "react": "^18.2.0",
