--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -13,18 +13,17 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@jottaf-ui/tokens": "*",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@ignite-ui/tokens": "*",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
-    "tsup": "^6.5.0",
-    "typescript": "^4.9.4"
+    "tsup": "^6.2.3",
+    "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@radix-ui/react-avatar": "^1.0.1",
-    "@radix-ui/react-checkbox": "^1.0.1",
+    "@radix-ui/react-avatar": "^1.0.0",
+    "@radix-ui/react-checkbox": "^1.0.0",
     "@stitches/react": "^1.2.8",
-    "@storybook/addon-a11y": "^6.5.16",
     "phosphor-react": "^1.4.1"
   }
 }
